add social media icons and some corrections on css

--- a/src/app/dopetrope/dope-banner/dope-banner.component.scss
+++ b/src/app/dopetrope/dope-banner/dope-banner.component.scss
@@ -35,7 +35,7 @@
     height: 35vh;
   }
   .banner{
-    width: 100%;
+    max-width: 100%;
     padding: 20px 15px;
     line-height: 30px;
     background: var(--banner-bg-color-075);
