--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,4 +24,8 @@ body{
     --main-light-gray-075: rgba(150, 150, 150, 0.75);
     --banner-bg-color-075: rgba(36, 33, 34, 0.97);
     --footer-border-color: rgba(255, 255, 255, 0.05);
+    --general-social-color: rgba(136, 136, 136);
+    --twitter-color: rgb(45, 170, 228);
+    --dribble-color: rgb(196, 55, 107);
+    --tumblr-color: rgb(43, 70, 97);
   }
